test/error3.frt.test
ERROR
Error at "error3.frt:1:14" : expected whitespace but got text