test/error3.frt
{!between ->} :D [<- there can be only whitespace!]
